test/instance-checks-9.err.expect
test/instance-checks-9.ktn:1:1: error: cannot solve scalar type constraint t1 = int
test/instance-checks-9.ktn:1:1: note: t1 is from here
test/instance-checks-9.ktn:1:13: note: int is from here
