test/instance-checks-9.ktn
define example<a> (int a -> a a): ->x y; x y
